Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37456

The QT_QPA_PLATFORM no-fullscreen parameter doesn't work on the BlackBerry 10 platform

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • 5.3.0 Beta1
    • 5.3.0 Beta1, 5.4.0
    • QPA
    • None
    • Z30 with BlackBerry 10 127.0.2.1091.
    • QNX
    • ff7f3aba39e69465caeea2f6fff0f41ec86fdb44

    Description

      The QT_QPA_PLATFORM (QNX specific) no-fullscreen parameter isn't fully functional on the BlackBerry 10 platform. Some unit tests depend on the application window being a specific size. It would be useful if this parameter worked so that it could be used when running the unit tests.

      1) set the QT_QPA_PLATFORM environment variable to "qnx:no-fullscreen"
      2) From qtbase/examples/gui/rasterwindow, run "./rasterwindow".
      3) The window occupies the entire screen.
      4) From qtbase/examples/gui/openglwindow, run "./openglwindow".
      5) The window occupies the entire screen.
      6) From qtbase/tests/auto/widgets/graphicsview/qgraphicsview, run "./tst_qgraphicsview".
      7) Many test failures occur because the windows are forced to full screen.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jmcdonnell James McDonnell
            jmcdonnell James McDonnell
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes