src/plugins/platforms/qnx/qqnxwindow.cpp
@@ -242,7 +242,7 @@ QQnxWindow::~QQnxWindow()
 void QQnxWindow::setGeometry(const QRect &rect)
 {
     QRect newGeometry = rect;
-    if (screen()->rootWindow() == this) //If this is the root window, it has to be shown fullscreen
+    if (shouldMakeFullScreen())
         newGeometry = screen()->geometry();
 
     setGeometryHelper(newGeometry);
@@ -714,7 +714,7 @@ void QQnxWindow::initWindow()
     if (window()->parent() && window()->parent()->handle())
         setParent(window()->parent()->handle());
 
-    if (screen()->rootWindow() == this) {
+    if (shouldMakeFullScreen()) {
         setGeometryHelper(screen()->geometry());
         QWindowSystemInterface::handleGeometryChange(window(), screen()->geometry());
     } else {
@@ -815,6 +815,11 @@ void QQnxWindow::windowPosted()
         m_cover->updateCover();
 
     qqnxLgmonFramePosted(m_cover);  // for performance measurements
+}
+
+bool QQnxWindow::shouldMakeFullScreen() const
+{
+    return ((screen()->rootWindow() == this) && (QQnxIntegration::options() & QQnxIntegration::FullScreenApplication));
 }
 
 QT_END_NAMESPACE
